--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "## Fork",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -19,5 +22,8 @@
   "homepage": "https://github.com/wannespappijn/fake-door-starter#readme",
   "dependencies": {
     "js-confetti": "^0.11.0"
+  },
+  "devDependencies": {
+    "vite": "^3.1.8"
   }
 }
